<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="dipl.sofia.sensostalker.activity.AboutActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_marginTop="26dp"
        android:id="@+id/imageView2"
        android:contentDescription="@string/app_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="26dp"
        android:id="@+id/textView4" />

    <TextView
        android:text="@string/v"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/textView5"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/mplaaa"
        android:layout_width="match_parent"
        android:layout_below="@+id/textView5"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="13sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:id="@+id/textView6"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/epiblepon"
        android:textAllCaps="false"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttttton"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/textView6"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/chat"
        android:textAllCaps="false"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/butttton"
        android:layout_below="@+id/buttttton"
        android:textColor="@color/colorPrimaryDark"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
